[gd_scene load_steps=15 format=3 uid="uid://dd5x6kgde7pqo"]

[ext_resource type="Script" path="res://Scripts/game_over.gd" id="1_7bhki"]
[ext_resource type="Shader" path="res://Scripts/menu_background.gdshader" id="2_funry"]
[ext_resource type="FontFile" uid="uid://dvhuitwjsd3ow" path="res://Fonts/JungleAdventurer.ttf" id="3_3g83c"]
[ext_resource type="AudioStream" uid="uid://d2jcnm1m76jiv" path="res://Assets/Music/typing_sound.mp3" id="4_0ms3a"]
[ext_resource type="Texture2D" uid="uid://iwlgq2bn6rjk" path="res://Assets/Menu/rotate_button.png" id="5_51qsi"]
[ext_resource type="AudioStream" uid="uid://dnkf6a7eo6vnw" path="res://Assets/Music/button_click.mp3" id="6_rsb0w"]
[ext_resource type="AudioStream" uid="uid://ck3p8c6ar58cm" path="res://Assets/Music/game_over.wav" id="7_vhuqp"]
[ext_resource type="AudioStream" uid="uid://najeo1b74x1a" path="res://Assets/Music/victory.mp3" id="8_4koao"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p3unw"]
shader = ExtResource("2_funry")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_6yicv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ScoreReport:visible_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RestartButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_2xxvj"]
resource_name = "blur"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 2.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6qx8w"]
resource_name = "score_report"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScoreReport:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_4gsdw"]
resource_name = "show_restart"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RestartButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_faout"]
_data = {
"RESET": SubResource("Animation_6yicv"),
"blur": SubResource("Animation_2xxvj"),
"score_report": SubResource("Animation_6qx8w"),
"show_restart": SubResource("Animation_4gsdw")
}

[node name="GameOver" type="Control"]
process_mode = 3
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7bhki")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_p3unw")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_faout")
}
speed_scale = 0.7

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -338.5
offset_top = 104.0
offset_right = 338.5
offset_bottom = 249.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0.58504, 0.633412, 0.799737, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("3_3g83c")
theme_override_font_sizes/font_size = 150
text = "Game Over!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="Label"]
z_index = -1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -575.5
offset_top = -15.0
offset_right = 578.5
offset_bottom = 160.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_3g83c")
theme_override_font_sizes/font_size = 150
text = "Game Over!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LegendMode" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -338.5
offset_top = 131.0
offset_right = 338.5
offset_bottom = 276.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0.603922, 0.65098, 0.811765, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("3_3g83c")
theme_override_font_sizes/font_size = 150
text = "You did it!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="LegendMode"]
z_index = -1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -575.5
offset_top = -15.0
offset_right = 578.5
offset_bottom = 160.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_3g83c")
theme_override_font_sizes/font_size = 150
text = "You did it!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreReport" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -286.0
offset_top = -8.0
offset_right = 286.0
offset_bottom = 471.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0.603922, 0.65098, 0.811765, 1)
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_offset_x = -1
theme_override_constants/shadow_outline_size = 5
theme_override_constants/line_separation = 10
theme_override_fonts/normal_font = ExtResource("3_3g83c")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "You did x y z"
visible_characters = 0
visible_ratio = 0.0

[node name="BestScore" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -91.0
offset_right = 146.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(1, 0.412918, 0.722267, 1)
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_offset_x = -1
theme_override_constants/shadow_outline_size = 6
theme_override_constants/line_separation = 10
theme_override_fonts/normal_font = ExtResource("3_3g83c")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center]High: 134[/center]"

[node name="BestScoreFade" type="RichTextLabel" parent="BestScore"]
modulate = Color(1, 1, 1, 0.576471)
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -22.5
offset_right = 145.0
offset_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_3g83c")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center]High: 134[/center]"

[node name="TypingEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_0ms3a")
max_distance = 1e+10
bus = &"SFX"

[node name="Delay" type="Timer" parent="."]
wait_time = 2.0

[node name="RestartButton" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -81.0
offset_top = -236.0
offset_right = 431.0
offset_bottom = 276.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("5_51qsi")

[node name="ClickButton" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_rsb0w")
volume_db = 20.0
max_distance = 1e+10
bus = &"SFX"

[node name="GameOverAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_vhuqp")
volume_db = 5.0
max_distance = 1e+10
bus = &"SFX"

[node name="GameFinishedAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_4koao")
volume_db = 10.0
max_distance = 1e+10
bus = &"SFX"

[node name="HighScoreAnimationTimer" type="Timer" parent="."]
wait_time = 0.08
autostart = true

[connection signal="timeout" from="Delay" to="." method="_on_delay_timeout"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="timeout" from="HighScoreAnimationTimer" to="." method="_on_high_score_animation_timer_timeout"]
